# ML-Notebook

./: README.md  pyproject.toml
notebook/Machine Learning With Pytorch and Scikit-Learn/: README.md
notebook/Machine Learning With Pytorch and Scikit-Learn/chapter1 /: notebook.ipynb
notebook/Machine Learning With Pytorch and Scikit-Learn/chapter2/: notebook.ipynb
