[tool.poetry]
name = "machine learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.0.1+cpu", source = "pytorch-cpu"}
torchvision = {version = "^0.15.2+cpu", source = "pytorch-cpu"}
torchaudio = {version = "^2.0.2+cpu", source = "pytorch-cpu"}
jupyterlab = "^4.0.5"
pandas = "^2.0.3"
matplotlib = "^3.7.2"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
